Added GameObject & Sprite classes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Pizza Legends</title>
-    <link href="/styles.css" type="text/css" rel="stylesheet">
+    <link href="/styles.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div class="game-container">
@@ -11,7 +11,8 @@
 
     <!-- Scripts -->
     <script src="/Overworld.js"></script>
+    <script src="/GameObject.js"></script>
+    <script src="/Sprite.js"></script>
     <script src="/init.js"></script>
-
   </body>
 </html>
