Updated Overworld map gestion

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="/Overworld.js"></script>
     <script src="/GameObject.js"></script>
     <script src="/Sprite.js"></script>
+    <script src="/OverworldMap.js"></script>
     <script src="/init.js"></script>
   </body>
 </html>
