--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Pizza Legends</title>
-    <link href="/styles.css" type="text/css" rel="stylesheet" />
+    <link href="/styles/global.css" type="text/css" rel="stylesheet" />
+    <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div class="game-container">
@@ -16,8 +17,11 @@
     <script src="/GameObject.js"></script>
     <script src="/Person.js"></script>
     <script src="/Sprite.js"></script>
+    
     <script src="/OverworldMap.js"></script>
     <script src="/OverworldEvent.js"></script>
+    <script src="/TextMessage.js"></script>
+    <script src="/KeyPressListener.js"></script>
     <script src="/init.js"></script>
   </body>
 </html>
