--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Pizza Legends</title>
-    <link href="/styles/global.css" type="text/css" rel="stylesheet" />
-    <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet" />
+    <link href="/styles/global.css" type="text/css" rel="stylesheet">
+    <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
+    <link href="/styles/SceneTransition.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="game-container">
@@ -17,11 +18,13 @@
     <script src="/GameObject.js"></script>
     <script src="/Person.js"></script>
     <script src="/Sprite.js"></script>
-    
     <script src="/OverworldMap.js"></script>
     <script src="/OverworldEvent.js"></script>
     <script src="/TextMessage.js"></script>
     <script src="/KeyPressListener.js"></script>
+    <script src="/RevealingText.js"></script>
+    <script src="/SceneTransition.js"></script>
     <script src="/init.js"></script>
+
   </body>
 </html>
