Added combatants & battle scene

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <link href="/styles/global.css" type="text/css" rel="stylesheet">
     <link href="/styles/TextMessage.css" type="text/css" rel="stylesheet">
     <link href="/styles/SceneTransition.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Battle.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Combatant.css" type="text/css" rel="stylesheet">
+    <link href="/styles/SubmissionMenu.css" type="text/css" rel="stylesheet">
+    <link href="/styles/Team.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <div class="game-container">
       <canvas class="game-canvas" width="352" height="198"></canvas>
     </div>
+
+    <!-- Content -->
+    <script src="Content/pizzas.js"></script>
 
     <!-- Scripts -->
     <script src="/utils.js"></script>
@@ -24,6 +31,13 @@
     <script src="/KeyPressListener.js"></script>
     <script src="/RevealingText.js"></script>
     <script src="/SceneTransition.js"></script>
+
+    <!-- Battle -->
+    <script src="/Battle/Battle.js"></script>
+    <script src="/Battle/Combatant.js"></script>
+    <script src="/Battle/SubmissionMenu.js"></script>
+    <script src="/Battle/Team.js"></script>
+
     <script src="/init.js"></script>
 
   </body>
