Add combat turncycle

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <!-- Content -->
     <script src="Content/pizzas.js"></script>
+    <script src="Content/actions.js"></script>
 
     <!-- Scripts -->
     <script src="/utils.js"></script>
@@ -37,7 +38,9 @@
     <script src="/Battle/Combatant.js"></script>
     <script src="/Battle/SubmissionMenu.js"></script>
     <script src="/Battle/Team.js"></script>
-
+    <script src="/Battle/BattleEvent.js"></script>
+    <script src="/Battle/TurnCycle.js"></script>
+    <script src="/Battle/BattleAnimations.js"></script>
     <script src="/init.js"></script>
 
   </body>
